adding model, routes for users
