# src/swagger.json
@@ -1,13 +1,23 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "RentalX Documentation",
+    "title": "RentX Documentation",
     "description": "This is the api Rent",
     "version": "1.0.0",
     "contact": {
       "email": "leonardoaugusto.soliveira@gmail.com"
     }
   },
+  "tags":[
+    {
+      "name": "Category",
+      "description": "Route for categories"
+    },
+    {
+      "name": "Specification",
+      "description": "Route for specifications"
+    }
+  ],
   "paths":{
     "/categories": {
       "post":{
@@ -76,6 +86,70 @@
               }
             }
           }
+        }
+      }
+    },
+    "/categories/import":{
+      "post": {
+        "tags": ["Category"],
+        "summary": "Upload a new category",
+        "description": "Upload a new category from file",
+        "requestBody": {
+          "content":{
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses":{
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/specifications": {
+      "post": {
+        "tags": ["Specification"],
+        "summary": "Create a specification",
+        "description": "Create a new specification",
+        "requestBody":{
+          "content":{
+            "application/json":{
+              "schema": {
+                "$ref": "#/definitions/Specifications"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201":{
+            "description": "Created"
+          },
+          "500":{
+            "description": "specifications already exists"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Specifications":{
+      "type": "object",
+      "properties": {
+        "name":{
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
         }
       }
     }
